--- a/l10n/po/ja_JP/_guides/tika.adoc.po
+++ b/l10n/po/ja_JP/_guides/tika.adoc.po
@@ -33,12 +33,12 @@ msgstr "このガイドでは、Quarkus アプリケーションが link:https:/
 #. type: Plain text
 #: upstream/_guides/tika.adoc:13
 msgid "https://tika.apache.org/[Apache Tika] is a content analysis toolkit which is used to parse the documents in PDF, Open Document, Excel and many other well known binary and text formats using a simple uniform API. Both the document text and properties (metadata) are available once the document has been parsed."
-msgstr "link:https://tika.apache.org/[Apache Tika] はコンテンツ分析ツールキットで、シンプルな統一 API を使って PDF, Open Document, Excel やその他多くのよく知られたバイナリやテキスト形式の文書を解析するのに使われます。文書のテキストとプロパティ (メタデータ) の両方が、文書が解析されると利用可能になります。"
+msgstr "link:https://tika.apache.org/[Apache Tika] はコンテンツ分析ツールキットで、シンプルな統合 API を使した PDF、Open Document、Excel やその他多くのよく知られたバイナリやテキスト形式の文書解析に使われます。文書のテキストとプロパティー (メタデータ) の両方が、文書が解析されると利用可能になります。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:17
 msgid "If you are planning to run the application as a native executable and parse documents that may have been created with charsets different than the standard ones supported in Java such as `UTF-8` then you should configure Quarkus Maven Plugin to get the native image generator include all the charsets available to the JVM:"
-msgstr "アプリケーションをネイティブ実行ファイルとして実行し、 `UTF-8` のようなJava でサポートされている標準の文字セットとは異なる文字セットで作成された可能性のあるドキュメントを解析する場合は、Quarkus Maven Plugin を設定して、ネイティブイメージジェネレータがJVM で利用可能なすべての文字セットを含むようにする必要があります。"
+msgstr "アプリケーションをネイティブ実行ファイルとして実行し、`UTF-8` のような Java でサポートされている標準の文字セットと異なる文字セットで作成された可能性のあるドキュメントを解析する場合は、Quarkus Maven Plugin を設定して、ネイティブイメージジェネレーターがJVM で利用可能なすべての文字セットを含むようにする必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:35
@@ -61,6 +61,22 @@ msgid ""
 "    </executions>\n"
 "</plugin>\n"
 msgstr ""
+"<plugin>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-maven-plugin</artifactId>\n"
+"    <executions>\n"
+"        <execution>\n"
+"            <id>native-image</id>\n"
+"            <goals>\n"
+"                <goal>native-image</goal>\n"
+"            </goals>\n"
+"            <configuration>\n"
+"                <addAllCharsets>true</addAllCharsets>\n"
+"                ...\n"
+"            </configuration>\n"
+"        </execution>\n"
+"    </executions>\n"
+"</plugin>\n"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:39
@@ -71,12 +87,12 @@ msgstr "前提条件"
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:42
 msgid "To complete this guide, you need:"
-msgstr "このガイドを完成させるには、以下が必要です："
+msgstr "このガイドを完成させるには、以下が必要です。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:44
 msgid "less than 20 minutes"
-msgstr "二十分弱"
+msgstr "20 分弱"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:45
@@ -86,7 +102,7 @@ msgstr "IDE"
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:46
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 1.8+ がインストールされ、`JAVA_HOME` が適切に設定されていること"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:47
@@ -112,12 +128,12 @@ msgstr "ソリューション"
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:54
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
+msgstr "次の章で紹介する手順に沿い、順を追ってアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:56
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr "Git レポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
+msgstr "Git レポジトリをクローンするか `git clone {quickstarts-clone-url}`、{quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: delimited block =
 #: upstream/_guides/tika.adoc:58
@@ -152,27 +168,34 @@ msgid ""
 "    -Dextensions=\"tika,resteasy\"\n"
 "cd tika-quickstart\n"
 msgstr ""
+"mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \\\n"
+"    -DprojectGroupId=org.acme.example \\\n"
+"    -DprojectArtifactId=tika-quickstart \\\n"
+"    -DclassName=\"org.acme.tika.TikaParserResource\" \\\n"
+"    -Dpath=\"/parse\" \\\n"
+"    -Dextensions=\"tika,resteasy\"\n"
+"cd tika-quickstart\n"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:81
 msgid "This command generates a Maven project, importing the `tika` and `resteasy` extensions."
-msgstr "このコマンドは、 `tika` と `resteasy` のエクステンションをインポートして、Maven プロジェクトを生成します。"
+msgstr "このコマンドは、`tika` と `resteasy` のエクステンションをインポートして、Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:84
 msgid "If you already have your Quarkus project configured you can add the `tika` and `resteasy` extensions to your project by running the following command in your project base directory."
-msgstr "すでにQuarkus プロジェクトが設定されている場合は、プロジェクトのベースディレクトリで次のコマンドを実行することで、 `tika` と `resteasy` のエクステンションをプロジェクトに追加できます。"
+msgstr "すでに Quarkus プロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで、次のコマンドを実行することで、 `tika` と `resteasy` のエクステンションをプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:88
 #, no-wrap
 msgid "./mvnw quarkus:add-extension -Dextensions=\"tika,resteasy\"\n"
-msgstr ""
+msgstr "./mvnw quarkus:add-extension -Dextensions=\"tika,resteasy\"\n"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:91
 msgid "This will add the following to your `pom.xml`:"
-msgstr "これにより、 `pom.xml` に以下が追加されます："
+msgstr "これにより、 `pom.xml` に以下が追加されます。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:102
@@ -187,6 +210,14 @@ msgid ""
 "    <artifactId>quarkus-resteasy</artifactId>\n"
 "</dependency>\n"
 msgstr ""
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-tika</artifactId>\n"
+"</dependency>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-resteasy</artifactId>\n"
+"</dependency>\n"
 
 #. type: Title ===
 #: upstream/_guides/tika.adoc:104
@@ -197,13 +228,13 @@ msgstr "生成されたJAX-RS リソースを調べる"
 #. type: Plain text
 #: upstream/_guides/tika.adoc:107
 msgid "Open the `src/main/java/org/acme/tika/TikaParserResource.java` file and see the following content:"
-msgstr "`src/main/java/org/acme/tika/TikaParserResource.java` ファイルを開くと、以下のような内容が表示されます："
+msgstr "`src/main/java/org/acme/tika/TikaParserResource.java` ファイルを開くと、以下のような内容が表示されます。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:111 upstream/_guides/tika.adoc:135
 #, no-wrap
 msgid "package org.acme.tika;\n"
-msgstr ""
+msgstr "package org.acme.tika;\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:116
@@ -214,6 +245,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:119
@@ -222,6 +257,8 @@ msgid ""
 "@Path(\"/parse\")\n"
 "public class TikaParserResource {\n"
 msgstr ""
+"@Path(\"/parse\")\n"
+"public class TikaParserResource {\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:126
@@ -234,6 +271,12 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @GET\n"
+"    @Produces(MediaType.TEXT_PLAIN)\n"
+"    public String hello() {\n"
+"        return \"hello\";\n"
+"    }\n"
+"}\n"
 
 #. type: Title ===
 #: upstream/_guides/tika.adoc:128
@@ -254,6 +297,9 @@ msgid ""
 "import java.time.Duration;\n"
 "import java.time.Instant;\n"
 msgstr ""
+"import java.io.InputStream;\n"
+"import java.time.Duration;\n"
+"import java.time.Instant;\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:146
@@ -266,6 +312,12 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.inject.Inject;\n"
+"import javax.ws.rs.Consumes;\n"
+"import javax.ws.rs.POST;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:149
@@ -274,6 +326,8 @@ msgid ""
 "import io.quarkus.tika.TikaParser;\n"
 "import org.jboss.logging.Logger;\n"
 msgstr ""
+"import io.quarkus.tika.TikaParser;\n"
+"import org.jboss.logging.Logger;\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:153
@@ -283,6 +337,9 @@ msgid ""
 "public class TikaParserResource {\n"
 "    private static final Logger log = Logger.getLogger(TikaParserResource.class);\n"
 msgstr ""
+"@Path(\"/parse\")\n"
+"public class TikaParserResource {\n"
+"    private static final Logger log = Logger.getLogger(TikaParserResource.class);\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:156
@@ -291,6 +348,8 @@ msgid ""
 "    @Inject\n"
 "    TikaParser parser;\n"
 msgstr ""
+"    @Inject\n"
+"    TikaParser parser;\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:163
@@ -303,24 +362,30 @@ msgid ""
 "    public String extractText(InputStream stream) {\n"
 "        Instant start = Instant.now();\n"
 msgstr ""
+"    @POST\n"
+"    @Path(\"/text\")\n"
+"    @Consumes({\"application/pdf\", \"application/vnd.oasis.opendocument.text\"})\n"
+"    @Produces(MediaType.TEXT_PLAIN)\n"
+"    public String extractText(InputStream stream) {\n"
+"        Instant start = Instant.now();\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:165
 #, no-wrap
 msgid "        String text = parser.getText(stream);\n"
-msgstr ""
+msgstr "        String text = parser.getText(stream);\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:167
 #, no-wrap
 msgid "        Instant finish = Instant.now();\n"
-msgstr ""
+msgstr "        Instant finish = Instant.now();\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:169
 #, no-wrap
 msgid "        log.info(Duration.between(start, finish).toMillis() + \" mls have passed\");\n"
-msgstr ""
+msgstr "        log.info(Duration.between(start, finish).toMillis() + \" mls have passed\");\n"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:173
@@ -330,11 +395,14 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"        return text;\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:176
 msgid "As you can see the JAX-RS resource method was renamed to `extractText`, `@GET` annotation was replaced with `POST` and `@Path(/text)` annotation was added, and `@Consumes` annotation shows that PDF and OpenDocument media type formats can now be accepted. An injected `TikaParser` is used to parse the documents and report the extracted text. It also measures how long does it take to parse a given document."
-msgstr "ご覧のように、JAX-RS のリソースメソッドの名前が `extractText` に変更され、 `@GET` アノテーションが `POST` に置き換わり、 `@Path(/text)` アノテーションが追加され、 `@Consumes` アノテーションでは、PDF と OpenDocument のメディアタイプのフォーマットが受け入れられるようになったことが示されています。注入された `TikaParser` は、文書を解析し、抽出されたテキストを報告するために使用されます。また、与えられた文書を解析するのにどのくらいの時間がかかるかを測定します。"
+msgstr "ご覧のように、JAX-RS のリソースメソッドの名前が `extractText` に変更され、`@GET` アノテーションが `POST` に置き換わり、`@Path(/text)` アノテーションが追加されました。また、`@Consumes` アノテーションでは、PDF と OpenDocument のメディアタイプのフォーマットが受け入れられるようになったことが示されています。注入された `TikaParser` は、文書を解析し、抽出されたテキストを報告するために使用されます。また、指定の文書の解析に要する時間を測定します。"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:177
@@ -345,18 +413,18 @@ msgstr "アプリケーションの実行"
 #. type: Plain text
 #: upstream/_guides/tika.adoc:180
 msgid "Now we are ready to run our application. Use:"
-msgstr "これで、アプリケーションを実行する準備が整いました。以下を使用して下さい："
+msgstr "これで、アプリケーションを実行する準備が整いました。以下を使用してください。"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:184
 #, no-wrap
 msgid "./mvnw compile quarkus:dev\n"
-msgstr ""
+msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:187
 msgid "and you should see output similar to:"
-msgstr "次のような出力が得られるはずです："
+msgstr "次のような出力が得られるはずです。"
 
 #. type: Block title
 #: upstream/_guides/tika.adoc:188
@@ -384,6 +452,21 @@ msgid ""
 "2019-10-15 14:23:27,638 INFO  [io.quarkus] (main) Profile dev activated. Live Coding activated.\n"
 "2019-10-15 14:23:27,639 INFO  [io.quarkus] (main) Installed features: [cdi, resteasy, tika]\n"
 msgstr ""
+"$ ./mvnw clean compile quarkus:dev\n"
+"[INFO] Scanning for projects...\n"
+"[INFO]\n"
+"INFO] --------------------< org.acme.example:apache-tika >--------------------\n"
+"[INFO] Building apache-tika 1.0.0-SNAPSHOT\n"
+"[INFO] --------------------------------[ jar ]---------------------------------\n"
+"...\n"
+"Listening for transport dt_socket at address: 5005\n"
+"2019-10-15 14:23:26,442 INFO  [io.qua.dep.QuarkusAugmentor] (main) Beginning quarkus augmentation\n"
+"2019-10-15 14:23:26,960 INFO  [io.qua.resteasy] (build-15) Resteasy running without servlet container.\n"
+"2019-10-15 14:23:26,960 INFO  [io.qua.resteasy] (build-15) - Add quarkus-undertow to run Resteasy within a servlet container\n"
+"2019-10-15 14:23:26,991 INFO  [io.qua.dep.QuarkusAugmentor] (main) Quarkus augmentation completed in 549ms\n"
+"2019-10-15 14:23:27,637 INFO  [io.quarkus] (main) Quarkus 999-SNAPSHOT started in 1.361s. Listening on: http://0.0.0.0:8080\n"
+"2019-10-15 14:23:27,638 INFO  [io.quarkus] (main) Profile dev activated. Live Coding activated.\n"
+"2019-10-15 14:23:27,639 INFO  [io.quarkus] (main) Installed features: [cdi, resteasy, tika]\n"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:209
@@ -397,11 +480,13 @@ msgid ""
 "$ curl -X POST -H \"Content-type: application/pdf\" --data-binary @target/classes/quarkus.pdf http://localhost:8080/parse/text\n"
 "Hello Quarkus\n"
 msgstr ""
+"$ curl -X POST -H \"Content-type: application/pdf\" --data-binary @target/classes/quarkus.pdf http://localhost:8080/parse/text\n"
+"Hello Quarkus\n"
 
 #. type: Plain text
 #: upstream/_guides/tika.adoc:217
 msgid "and"
-msgstr "そして"
+msgstr "および"
 
 #. type: delimited block -
 #: upstream/_guides/tika.adoc:222
@@ -410,6 +495,8 @@ msgid ""
 "$ curl -X POST -H \"Content-type: Content-type: application/vnd.oasis.opendocument.text\" --data-binary @target/classes/quarkus.odt http://localhost:8080/parse/text\n"
 "Hello Quarkus\n"
 msgstr ""
+"$ curl -X POST -H \"Content-type: Content-type: application/vnd.oasis.opendocument.text\" --data-binary @target/classes/quarkus.odt http://localhost:8080/parse/text\n"
+"Hello Quarkus\n"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:224
@@ -420,7 +507,7 @@ msgstr "ネイティブ実行可能ファイルの構築"
 #. type: Plain text
 #: upstream/_guides/tika.adoc:228
 msgid "You can build a native executable with the usual command `./mvnw package -Pnative`.  Running it is as simple as executing `./target/tika-quickstart-1.0.0-SNAPSHOT-runner`."
-msgstr "通常のコマンド `./mvnw package -Pnative` でネイティブの実行ファイルをビルドできます。実行は `./target/tika-quickstart-1.0-SNAPSHOT-runner` を実行するだけで簡単です。"
+msgstr "通常のコマンド `./mvnw package -Pnative` でネイティブの実行ファイルをビルドできます。`./target/tika-quickstart-1.0-SNAPSHOT-runner` を実行するだけで簡単です。"
 
 #. type: Title ==
 #: upstream/_guides/tika.adoc:229
