--- a/l10n/po/ja_JP/_versions/1.7/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/native-and-ssl.adoc.po
@@ -28,17 +28,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:11
 msgid "We are quickly moving to an SSL-everywhere world so being able to use SSL is crucial."
-msgstr ""
+msgstr "常時SSL接続の時代へと急速に移行しているので、SSLを利用できることは非常に重要です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:14
 msgid "In this guide, we will discuss how you can get your native executables to support SSL, as native executables don't support it out of the box."
-msgstr ""
+msgstr "ネイティブの実行ファイルは標準ではSSLをサポートしていないので、このガイドではネイティブの実行ファイルでSSLをサポートする方法を説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:16
 msgid "If you don't plan on using native executables, you can pass your way as in JDK mode, SSL is supported without further manipulations."
-msgstr ""
+msgstr "JDK モードでは特に変更しなくても SSL がサポートされているので、ネイティブの実行ファイルを使用する予定がない場合はパスできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:17
@@ -74,7 +74,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:27
 msgid "This guide is based on the REST client guide so you should get this Maven project first."
-msgstr ""
+msgstr "このガイドはRESTクライアントガイドに基づいているので、最初にこのMavenプロジェクトを取得する必要があります:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:29
@@ -84,13 +84,13 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:31
 msgid "The project is located in the `rest-client-quickstart` {quickstarts-tree-url}/rest-client-quickstart[directory]."
-msgstr ""
+msgstr "プロジェクトは `rest-client-quickstart` {quickstarts-tree-url}/rest-client-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:32
 #, no-wrap
 msgid "Looks like it works out of the box?!?"
-msgstr ""
+msgstr "修正不要にみえる?!?"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:39
@@ -127,7 +127,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:53
 msgid "So, yes, it appears it works out of the box and this guide is pretty useless."
-msgstr ""
+msgstr "はい、修正不要で動作し、このガイドはかなり役立たずであるように見えますね。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:58
@@ -142,7 +142,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:65
 msgid "They enable the native SSL support for your native executable."
-msgstr ""
+msgstr "これはネイティブ実行ファイルのネイティブSSLサポートを有効にします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:67
@@ -152,12 +152,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:69
 msgid "the Agroal connection pooling extension (`quarkus-agroal`),"
-msgstr ""
+msgstr "Agroalコネクションプールエクステンション ( `quarkus-agroal` )、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:70
 msgid "the Amazon DynamoDB extension (`quarkus-amazon-dynamodb`),"
-msgstr ""
+msgstr "Amazon DynamoDBエクステンション ( `quarkus-amazon-dynamodb` ),"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:71
@@ -167,77 +167,77 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:72
 msgid "the Infinispan Client extension (`quarkus-infinispan-client`)."
-msgstr ""
+msgstr "Infinispan クライアントエクステンション ( `quarkus-infinispan-client` )、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:73
 msgid "the Jaeger extension (`quarkus-jaeger`),"
-msgstr ""
+msgstr "Jaeger エクステンション ( `quarkus-jaeger` )、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:74
 msgid "the JGit extension (`quarkus-jgit`),"
-msgstr ""
+msgstr "JGit エクステンション ( `quarkus-jgit` )、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:75
 msgid "the Keycloak extension (`quarkus-keycloak`),"
-msgstr ""
+msgstr "Keycloak エクステンション ( `quarkus-keycloak` )、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:76
 msgid "the Kubernetes client extension (`quarkus-kubernetes-client`),"
-msgstr ""
+msgstr "Kubernetes クライアントエクステンション ( `quarkus-kubernetes-client` )、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:77
 msgid "the Mailer extension (`quarkus-mailer`),"
-msgstr ""
+msgstr "Mailer エクステンション ( `quarkus-mailer` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:78
 msgid "the Redis client extension (`quarkus-redis-client`),"
-msgstr ""
+msgstr "Redis クライアントエクステンション ( `quarkus-redis-client` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:79
 msgid "the MongoDB extension (`quarkus-mongodb-client`),"
-msgstr ""
+msgstr "MongoDB エクステンション ( `quarkus-mongodb-client` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:80
 msgid "the Neo4j extension (`quarkus-neo4j`),"
-msgstr ""
+msgstr "Neo4j エクステンション ( `quarkus-neo4j` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:81
 msgid "the OAuth2 extension (`quarkus-elytron-security-oauth2`),"
-msgstr ""
+msgstr "OAuth2 エクステンション ( `quarkus-elytron-security-oauth2` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:82
 msgid "the REST client extension (`quarkus-rest-client`),"
-msgstr ""
+msgstr "REST クライアントエクステンション ( `quarkus-rest-client` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:83
 msgid "the Reactive client for PostgreSQL extension (`quarkus-reactive-pg-client`),"
-msgstr ""
+msgstr "PostgreSQLエクステンションのReactiveクライアント ( `quarkus-reactive-pg-client` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:84
 msgid "the Reactive client for MySQL extension (`quarkus-reactive-mysql-client`),"
-msgstr ""
+msgstr "MySQL エクステンションの Reactive クライアント ( `quarkus-reactive-mysql-client` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:85
 msgid "the Reactive client for DB2 extension (`quarkus-reactive-db2-client`)."
-msgstr ""
+msgstr "DB2 エクステンションの Reactive クライアント ( `quarkus-reactive-db2-client` ) 、"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:87
 msgid "As long as you have one of those extensions in your project, the SSL support will be enabled by default."
-msgstr ""
+msgstr "プロジェクトにこれらのエクステンションのいずれかがある限り、SSLサポートはデフォルトで有効になります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:93
@@ -248,17 +248,17 @@ msgstr ""
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:94
 #, no-wrap
 msgid "Let's disable SSL and see how it goes"
-msgstr ""
+msgstr "では、SSLを無効にしてどうなるか見てみましょう"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:99
 msgid "Quarkus has an option to disable the SSL support entirely.  Why? Because it comes at a certain cost.  So if you are sure you don't need it, you can disable it entirely."
-msgstr ""
+msgstr "Quarkusには、SSLのサポートを完全に無効にするオプションがあります。なぜでしょうか?それは、一定のコストがかかるからです。ですから、必要ないと確信している場合は、完全に無効にすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:101
 msgid "First, let's disable it without changing the REST service URL and see how it goes."
-msgstr ""
+msgstr "まずは、RESTサービスのURLを変えずに無効化して様子を見てみましょう。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:106
@@ -278,7 +278,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:118
 msgid "This error is the one you obtain when trying to use SSL while it was not explicitly enabled in your native executable."
-msgstr ""
+msgstr "このエラーは、ネイティブ実行ファイルで明示的に有効にしない状態でSSLを使用しようとしたときに発生するエラーです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:123
@@ -308,18 +308,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:149
 msgid "Yes, it is now **35 MB** whereas it used to be **46 MB**. SSL comes with a 11 MB overhead in native executable size."
-msgstr ""
+msgstr "はい、以前は *46MB* だったのが *35MB* になりました。SSLはネイティブの実行可能サイズで11MBのオーバーヘッドを持っています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:151
 msgid "And there's more to it."
-msgstr ""
+msgstr "そして、それだけではありません。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:152
 #, no-wrap
 msgid "Let's start again with a clean slate"
-msgstr ""
+msgstr "クリーンな状態でもう一回"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:158
@@ -340,17 +340,17 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:170
 msgid "This behavior is new to GraalVM 19.3+."
-msgstr ""
+msgstr "この動作はGraalVM 19.3+のものです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:177
 msgid "When creating a native binary, GraalVM embraces the principle of \"immutable security\" for the root certificates.  This essentially means that the root certificates are fixed at image build time, based on the certificate configuration used at that build time (which for Quarkus means when you perform a build having `quarkus.package.type=native` set).  This avoids shipping a `cacerts` file or requiring a system property be set in order to set up root certificates that are provided by the OS where the binary runs."
-msgstr ""
+msgstr "ネイティブバイナリーを作成する際、GraalVMはルート証明書の「不変のセキュリティー」の原則を採用しています。これは本質的に、ルート証明書がイメージのビルド時に、そのビルド時に使用される証明書の設定に基づいて固定されることを意味します(Quarkusでは、 `quarkus.package.type=native` を設定してビルドを実行することを意味します)。これにより、 `cacerts` ファイルを出荷したり、バイナリーが実行されるOSによって提供されるルート証明書を設定するためにシステムプロパティーを設定する必要がなくなります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:181
 msgid "As a consequence, system properties such as `javax.net.ssl.trustStore` do not have an effect at run time, so when the defaults need to be changed, these system properties must be provided at image build time.  The easiest way to do so is by setting `quarkus.native.additional-build-args`. For example:"
-msgstr ""
+msgstr "その結果、 `javax.net.ssl.trustStore` のようなシステムプロパティーは実行時には影響を及ぼさないため、デフォルトを変更する必要がある場合は、イメージのビルド時にこれらのシステムプロパティーを提供する必要があります。最も簡単な方法は `quarkus.native.additional-build-args` を設定することです。例:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:185
@@ -360,23 +360,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:187
 msgid "will ensure that the certificates of `/tmp/mycerts` are baked into the native binary and used *in addition* to the default cacerts."
-msgstr ""
+msgstr "上記は `/tmp/mycerts` の証明書がネイティブバイナリーに焼き込まれ、デフォルトの cacerts に *加えて* 使用されることを保証します。"
 
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:191
 msgid "The file containing the custom TrustStore does *not* have to be present at runtime as its content has been baked into the native binary."
-msgstr ""
+msgstr "カスタムTrustStoreを含むファイルは、その内容がネイティブバイナリーに焼き込まれているため、実行時に存在する必要は *ありません* 。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:194
 #, no-wrap
 msgid "Working with containers"
-msgstr ""
+msgstr "コンテナーへの対応"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:198
 msgid "No special action needs to be taken when running the native binary in a container. If the native binary was properly built with the custom TrustStore as described in the previous section, it will work properly in container as well."
-msgstr ""
+msgstr "コンテナー内でネイティブバイナリーを実行する際に特別な対応を取る必要はありません。前のセクションで説明したように、ネイティブバイナリーがカスタムTrustStoreを使って適切にビルドされていれば、コンテナー内でも正常に動作します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:199
@@ -387,9 +387,9 @@ msgstr "まとめ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:203
 msgid "We make building native executable easy and, even if the SSL support in GraalVM is still requiring some serious thinking, it should be mostly transparent when using Quarkus."
-msgstr ""
+msgstr "ネイティブ実行ファイルのビルドを簡単にしています。GraalVMでのSSLサポートはまだ真剣に考える必要があるとしても、Quarkusを使用する場合はほとんど透過的になるはずです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/native-and-ssl.adoc:204
 msgid "We track GraalVM progress on a regular basis so we will promptly integrate in Quarkus any improvement with respect to SSL support."
-msgstr ""
+msgstr "GraalVMの進捗状況を定期的に追跡していますので、SSLサポートに関する改善点があれば、速やかにQuarkusに統合していきます。"
